--- a/horizontal/horizontal.css
+++ b/horizontal/horizontal.css
@@ -14,6 +14,7 @@
   
   .progress-fill{
     max-width: 200px;
+    width: 100%;
     height: 100%;  
     background-color: #008000;
     animation-name: progress-animation;
