--- a/vertical/vertical.css
+++ b/vertical/vertical.css
@@ -1,32 +1,40 @@
 .progress-external{
     border-radius: 8px;
     border: 1px solid #808080;
-    width: 200px;
-    height: 20px;
+    width: 20px;
+    height: 200px;
     overflow:hidden;
+    position:relative;
   }
   
   .progress-internal{
-    max-width: 200px;
-    height: 100%;  
+    width: 100%;
+    max-height: 200px;  
+    position:absolute;
+    bottom: 0;
   }
   
   
   .progress-fill{
-    height: 100%;  
+    position:absolute;
+    bottom: 0;
     width: 100%;
+    max-height: 200px; 
+    height: 100%;
     background-color: #008000;
     animation-name: progress-animation;
     animation-duration: 1s;
     animation-timing-function: linear;
+   
   }
+  
   
   
   @keyframes progress-animation {
     0% {
-      width: 0;
+      height: 0;
     }
     100% {
-      width: 100%;
+      height: 100%;
     }
   }
