fix: progress-bar horizontal width 2023-06-20 21:07

--- a/horizontal/horizontal.css
+++ b/horizontal/horizontal.css
@@ -7,13 +7,12 @@
   }
   
   .progress-internal{
-    max-width: 200px;
+    max-width: 100%;
     height: 100%;  
   }
   
   
   .progress-fill{
-    max-width: 200px;
     width: 100%;
     height: 100%;  
     background-color: #008000;
