--- a/vertical/vertical.css
+++ b/vertical/vertical.css
@@ -9,7 +9,7 @@
   
   .progress-internal{
     width: 100%;
-    max-height: 200px;  
+    max-height: 100%;  
     position:absolute;
     bottom: 0;
   }
@@ -19,7 +19,6 @@
     position:absolute;
     bottom: 0;
     width: 100%;
-    max-height: 200px; 
     height: 100%;
     background-color: #008000;
     animation-name: progress-animation;
